
	* Source/GSConnection.m: Improved coder caching and added code for
	multiple thread support.
	* Source/GSPortCoder.m: Improved performance of class version
	lookup and tidied.
	* Source/GSTcpPort.m: Ensure we don't remain in the run loop any
	longer than necessary.
	* Source/NSArchiver.m: minor tidyup
	* Source/NSDistantObject.m: minor performance tweak
	* Source/NSUnarchiver.m: minor tidyup.

2000-07-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSConnection.m: Cache coders fro performance.
	* Source/GSPortCoder.m: support re-use.
	* Source/GSTcpPort.m: tidy locking.
	* Source/NSData.m: optimize +new
	* Source/NSGCString.m: optimize -hash
	* Source/NSGDictionary.m: optimize string hashing
	* SourceNSObject.m: Call GSBuildStrings() for global constants.
	* Source/NSPort.m: Create GSTcpPort by default.
	* Source/externs.m: GSBuildStrings() now used to make string
	constants that support cached hash values
	* Testing/client.m: Added simple benchmarking.
	* Testing/server.m: Added method for simple benchmarking.
	* Testing/server.h: Added method for simple benchmarking.
	* Tools/gdnc.m: String OPENSTEP use of DO

2000-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSConnection.m: Implementation almost complete
	* Source/GSPortCoder.m: Completed
	* Source/GSTcpPort.m: tidied for MacOS-X compatibility
	* Source/NSArchiver.m: Bugfix encoding structures containing arrays
	* Source/NSData.m: minor tidy
	* Source/NSDistantObject.m: update for new implementation
	* Source/NSInvocation.m: bugfix decoding
	* Source/NSPort.m: update for MacOS-X complience
	* Source/NSPortNameServer.m: tidied
	* Testing/client.m: Update
	* Testing/server.m: update

2000-06-30  Adam Fedor  <fedor@gnu.org>

	libgstep-base now compiles (and links) into a DLL on Cygwin.
	* configure.in: Typo in checking for cygwin.

	* Headers/gnustep/base/NSHashTable.h: GS_EXPORT functions.
	* Headers/gnustep/base/NSMapTable.h: Likewise.
