@@ -9,6 +9,7 @@
 	* Source/NSArchiver.m: minor tidyup
 	* Source/NSDistantObject.m: minor performance tweak
 	* Source/NSUnarchiver.m: minor tidyup.
+	* Source/NSPortNameServer.m: Update for MacOS-X
 
 2000-07-03  Richard Frith-Macdonald <rfm@gnu.org>
 
